# cgpt

./: .cookiecutter.json  .env_example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO  USAGE.md  build.sh  cgpt.py  cgpt.sh  cli_gpt.py  devbox.json  docker-compose.yml  main.py  noxfile.py  overview.md  pypi_desc.md  pyproject.toml  requirements.txt  setup.py
.github/: labels.yml  python-publish.yml
.github/workflows/: constraints.txt  pre-release.yml  python-app.yml  release.yml  tests.yml
app/: base.py  create_env.py  file_service.py  main.py  plugin.py
app/client/: main.py
app/commands/: main.py
app/server/: main.py
app/utils/: constant.py  thread_pool.py  verify_env.py
docs/: conf.py  index.md  license.md  reference.md  requirements.txt  usage.md
src/cgpt/: __init__.py  __main__.py  decorators.py
src/cgpt/app/: __init__.py  base.py  create_env.py  main.py  plugin.py
src/cgpt/app/client/: __init__.py  main.py
src/cgpt/app/commands/: __init__.py  main.py
src/cgpt/app/server/: __init__.py  main.py
src/cgpt/app/utils/: constant.py  verify_env.py
tests/: .env  __init__.py  test_create_env.py  test_main.py  test_plugin.py  test_socket_io.py  test_socket_server.py
utils/: constant.py
