[tool.poetry]
name = "cgpt"
version = "1.2.7b0"
description = "Cgpt"
authors = ["Aina Yves <randrianaina.yves@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ainayves/cgpt"
repository = "https://github.com/ainayves/cgpt"
documentation = "https://cgpt.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "src/cgpt"
]

markers = [
    "webtest",
    "localtest",
]

[tool.poetry.urls]
Changelog = "https://github.com/ainayves/cgpt/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
darglint = ">=1.8.1"
furo = ">=2021.11.12"
isort = ">=5.10.1"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-click = "*"
typeguard = "*"
openai = "^0.28"
python-dotenv = "*"
termcolor = "*"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
cgpt = "cgpt.__main__:cgpt"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["cgpt", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
